--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -86,10 +86,13 @@
 			var parsed = JSON.parse(event.data);
 			$('.sensor-label').text("X: " + parsed.AngleX + " Y: " + parsed.AngleY 
 			+ " NoHang: " + parsed.AngleX_NoHang + " Hang: " + parsed.AngleX_Hang
-			+ " HangDetected: " + parsed.HangDetected);
+			+ " HangDetected: " + parsed.HangDetected + "HangStateChanged: " + parsed.HangStateChanged);
 
-			if (parsed.HangDetected == true) { done.play() ; }
-			if (parsed.HangDetected == false) { failed.play() ; }
+			if (parsed.HangStateChanged == true)
+			{
+				if (parsed.HangDetected == true) { done.play() ; }
+				if (parsed.HangDetected == false) { failed.play() ; }
+			}
 		}
 	</script>
 
