--- a/hangboard-web/templates/layout.html
+++ b/hangboard-web/templates/layout.html
@@ -106,7 +106,7 @@
 
 
 				// If a timer is running
-				if (timerstatus == false) // if a timer is running - stop it whewn released sensor
+				if (timerstatus == false) // if a timer is running - stop it when released sensor
 				{
 					console.log ("no timer running.")
 					if (parsed.HangDetected == false) {
