--- a/hangboard-web/templates/config.html
+++ b/hangboard-web/templates/config.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+<div>Select Server
+
   <div id="ServerNameField">
     Server Name: 
   </div>
@@ -11,6 +13,36 @@
 
   <input id="ServerName" type="text">
   <input type="button" value="ServerName" onClick="doConfigServerName()">
+
+</div>
+
+
+<div>Select Hangboard
+  
+  <div id="HangBoardNameField">
+    Hangboard Name: 
+  </div>
+
+  <br><br>
+
+  <input id="HangboardName" type="text">
+  <input type="button" value="HangboardName" onClick="doConfigHangboardName()">
+
+  <br><br>
+
+  <div>
+    Select an exercise?
+    <span class="list-label">... Press the button below to load the list ...s</span>
+  </div>
+
+  <div>
+    <p id="ListHangboards"></p>
+  </div>
+
+  <button class="btn btn-primary" onclick="sendListHangboards()">Get List </button>
+
+
+</div>
 
 
 {% endblock %}
