integrate gyroscope with timer controls

--- a/hangboard-web/templates/index.html
+++ b/hangboard-web/templates/index.html
@@ -27,6 +27,8 @@
 		<button class="btn btn-primary" onclick="sendStartSignal()">Start</button>
 		<button class="btn btn-danger" onclick="sendStopSignal()">Stop</button>
 		<button class="btn btn-danger" onclick="sendGetBoard()">Board</button>
+		<button class="btn btn-primary" onclick="sendStartHang()">StartHang</button>
+		<button class="btn btn-primary" onclick="sendStopHang()">StopHang</button>
 	</div>
 
 {% endblock %}
