show detected hang

--- a/hangboard-web/templates/index.html
+++ b/hangboard-web/templates/index.html
@@ -20,6 +20,13 @@
 		<div style="width: 30%;">
 			<div id="svgInlineDiv" style="width: 30%;"></div>
 		</div>
+
+		<div>
+			<span class="last-hang-label">Last Hang: None</span>
+			<div id="hang-detected" class="alert alert-light" role="alert">
+				<span class="hang-detected-label">This will show whether a hang is detected.</span>
+			</div>
+		</div>
 	</div>
 
 	<!--- Exercise Controls -->
