rep and exercise counters in frontend

--- a/hangboard-web/templates/index.html
+++ b/hangboard-web/templates/index.html
@@ -27,6 +27,12 @@
 				<span class="hang-detected-label">This will show whether a hang is detected.</span>
 			</div>
 		</div>
+
+		<div>
+			<span class="workout-label">Current Workout information</span><br/>
+			<span class="current-exercise-label">Current Exercise information</span><br/>
+			<span class="current-set-label">Current Set information</span><br/>
+		</div>
 	</div>
 
 	<!--- Exercise Controls -->
