--- a/hangboard-web/templates/index.html
+++ b/hangboard-web/templates/index.html
@@ -2,25 +2,31 @@
 {% block content %}
 
 
-
-	<!--- Exercise Info -->
-  	<div class="alert alert-light" role="alert">
-		<span class="exercise-label">Exercise: </span>
-	</div>
-
-	
 	<!--- Progress Bar and Board with Holds-->
 	<div style="margin: 50px;">
-		<div class="progress" style="width: 50%;">
-			<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-				<span class="progress-bar-label">0%</span>
-			</div>
-		</div>
+
 
 		<div style="width: 30%;">
 			<div id="svgInlineDiv" style="width: 30%;"></div>
 		</div>
 
+
+
+
+
+
+		<!--- Exercise Info -->
+		<div class="alert alert-light" role="alert">
+			<div class="progress" style="width: 75%;">
+				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+					<span class="progress-bar-label">0%</span>
+				</div>
+			</div>
+			<span class="exercise-label">Exercise: </span>
+			<span class="current-exercise-label">Current Exercise information</span><br/>
+		</div>
+
+		<!-- Performance information -->
 		<div>
 			<span class="last-hang-label">Last Hang: None</span>
 			<div id="hang-detected" class="alert alert-light" role="alert">
@@ -28,12 +34,15 @@
 			</div>
 		</div>
 
+
 		<div>
 			<span class="workout-label">Current Workout information</span><br/>
-			<span class="current-exercise-label">Current Exercise information</span><br/>
 			<span class="current-set-label">Current Set information</span><br/>
 		</div>
+
 	</div>
+
+
 
 	<!--- Exercise Controls -->
 	<div>
